# 05-2021_Homeworks

./: .gitignore  README.md  requirements.txt
homework_01/: main.py
homework_02/: base.py  car.py  engine.py  plane.py  test.py
homework_03/: Dockerfile  pyproject.toml
homework_03/homework_03/: Dockerfile  main.py
homework_03/homework_03/tests/: test_homework_03.py
homework_04/: __init__.py  docker-compose.yaml  main.py  models.py  pyproject.toml
homework_04/homework_04/: jsonplaceholder_requests.py  main.py
homework_04/tests/: test_homework_04.py
homework_05/: app.py
homework_05/templates/: about.html  base.html  index.html
homework_06/: Dockerfile  app.py  docker-compose.yaml  entrypoint.sh  postgres.env  requirements.txt
homework_06/migrations/versions/: ada0c2544f72_initial_migration_first_migrate.py
homework_06/models/: __init__.py  product.py
homework_06/static/css/: bootstrap.min.css  style.css
homework_06/templates/index/: index.css  index.html
homework_06/templates/products/: add.html  base.html  detail.html  list.html
homework_06/views/: products.py
homework_07/My_garage/: manage.py
homework_07/My_garage/Cars/: models.py  views.py
homework_07/My_garage/My_garage/: asgi.py  settings.py  urls.py  wsgi.py
homework_08/Jobs/: .gitignore  gitignore  project_bd.sqlite3
homework_08/Jobs/Employees/: views.py
homework_08/Jobs/Jobs/: settings.py  urls.py
homework_09/Jobs/: .gitignore
homework_09/Jobs/Employees/: models.py  tests.py  views.py
homework_10/Jobs/: .gitignore
testing/test_homework_01/: test_main.py
(+22 files in other folders)
