[tool.poetry]
name = "homework_03"
version = "0.1.0"
description = ""
authors = ["Kirill_P <62252797+GalliyRazotto@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "^0.14.0"
python-multipart = "^0.0.5"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
fastapi = "^0.68.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
