[tool.poetry]
name = "homework_04"
version = "0.1.0"
description = ""
authors = ["Kirill_P <62252797+GalliyRazotto@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
SQLAlchemy = {version = "1.4.22", extras = ["asyncio"]}
alembic = "^1.6.5"
aiohttp = "^3.7.4"
docker = "^5.0.0"
psycopg2 = "^2.9.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
